# project_backup

my_robot_description/: CMakeLists.txt
my_robot_description/config/: nav2_params.yaml
my_robot_description/launch/: nav2.launch.py  (+2 more)
my_robot_navigation/: CMakeLists.txt  package.xml
my_robot_navigation/config/: nav2_  nav2_params.yaml
my_robot_navigation/config/behavior_trees/: navigate_to_pose_w_replanning.xml
my_robot_navigation/config/maps/: mapper_params_online_async.yaml  test_map.yaml
my_robot_navigation/config/nav2_params/: amcl_minimal.yaml  amcl_params.yaml  behavior_params.yaml  controller_params.yaml  costmap_common.yaml  global_costmap.yaml  local_costmap.yaml  planner_params.yaml
my_robot_navigation/config/robots/: my_robot.yaml
my_robot_navigation/config/rviz/: navigation.rviz
my_robot_navigation/launch/: bringup_sim.launch.py  nav2_sim.launch.py  navigation.launch.py  navigation_optimized.launch.py  rviz_launch.py  slam_launch.py  slam_sim.launch.py  slam_simple.launch.py
my_robot_navigation/maps/: my_new_map.pgm  my_new_map.yaml  my_test_map.pgm  my_test_map.yaml
my_robot_navigation/maps/complex_room/: complex_room.pgm  complex_room.yaml
my_robot_navigation/maps/complex_test01/: complex_test01.pgm  complex_test01.yaml
my_robot_navigation/maps/map_ign/: map_ign_test01.pgm  map_ign_test01.yaml  map_ign_test02.pgm  map_ign_test02.yaml
my_robot_navigation/params/: nav2_params.yaml
my_robot_navigation/rviz/: nav2_view.rviz  view_robot.rviz
my_robot_navigation/scripts/: param_tuner.py  performance_monitor.py  send_goal.py
(+9 files in other folders)
