<?xml version="1.0"?>
<package format="3">
  <name>my_robot_navigation</name>
  <version>0.0.1</version>
  <description>Navigation package for my_robot</description>
  <maintainer email="q11@example.com">q11</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclpy</depend>
  <depend>nav2_bringup</depend>
  <depend>nav2_amcl</depend>
  <depend>nav2_map_server</depend>
  <depend>nav2_bt_navigator</depend>
  <depend>nav2_controller</depend>
  <depend>nav2_planner</depend>
  <depend>nav2_lifecycle_manager</depend>
  
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>my_robot_description</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

